# WikidataMCP

./: .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
MCP/: __init__.py  __inti__.py  server.py  wikidata.py  wikidata_vectordb.py
templates/: docs.html
wikidata/: utils.py  vectordb.py
wikidataMCP/: __init__.py  tools.py  utils.py
