[project]
name = "wikidatamcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "fastmcp>=2.9.2",
    "markdown2>=2.5.4",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250611",
]
